--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -8,6 +8,7 @@
 /* Body */
 body{
     background-image: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+    user-select: none;
 }
 /* Nav */
 nav{
