--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -5,6 +5,9 @@
     font-family: 'Kanit', sans-serif;
     color: #fde2ff;
 }
+p {
+    margin-bottom: 0;
+}
 /* Body */
 body{
     background: #690169;
@@ -214,7 +217,7 @@ tbody {
     color: #ff00bf;
 }
 .height1 {
-    min-height: 60vh;
+    min-height: 61vh;
     transition: 0.5s;
 }
 .height1:hover{
